--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  background-image: linear-gradient(
+    131deg,
+    #e8f0ce 16.67%,
+    #c3ebe2 16.67%,
+    #c3ebe2 50%,
+    #e8f0ce 50%,
+    #e8f0ce 66.67%,
+    #c3ebe2 66.67%,
+    #c3ebe2 100%
+  );
+  background-size: 2385.02px 2743.66px;
 }
 
 code {
@@ -17,4 +28,9 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+h3 {
+  margin: 0;
+  padding: 0;
 }
